2015-06-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (get_key_buffer): Add some debugging code to make it
	easy to see what codes a key stroke produces.

2015-06-07  Benno Schulenberg  <bensberg@justemail.net>
	* doc/texinfo/nano.texi: Show the node with the command-line options
	in the main menu, to make it easy to find.
	* doc/texinfo/nano.texi: Improve some formatting, hyphenation, wording
	and dashes.  And remove some confusing, historical things.
	* doc/man/nano.1, doc/man/nanorc.5, doc/texinfo/nano.texi: Clarify the
	meaning of --backupdir: it doesn't just specify a directory for saving
	backup files, it mainly causes uniquely numbered backups to be made.
	* doc/man/nano.1: Add a section on the non-obvious functioning of the
	cutbuffer and the mark.

2015-06-04  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.h: Fix compilation with --enable-tiny.
	* nano.spec.in: Add the post-install and pre-uninstall rules for the
	Info document, plus some tweaks.  (Patch was tested by Kamil Dudka.)

2015-06-02  Benno Schulenberg  <bensberg@justemail.net>
	* doc/man/nanorc.5, doc/texinfo/nano.texi: Tweak some wordings, and
	add some missing formatting to the Info document, and fix an mdash.
	* doc/syntax/debian.nanorc: Colour also an optional option.
	This addresses Debian bug #664456 reported by Shawn Landden.
	Also shorten the name of the syntax to "sources.list".
	* doc/syntax/python.nanorc: Require again that the triple quote	that
	starts a docstring is followed by some character -- it is better to
	*not* colour some strings than far too often colour far too much.
	This addresses Debian bug #785508 reported by Alexandre Detiste.

2015-05-31  Mahyar Abbaspour  <mahyar.abaspour@gmail.com>
	* src/prompt.c (get_statusbar_page_start): Prevent a floating-point
	exception when the available length for an answer becomes zero.

2015-05-28  Benno Schulenberg  <bensberg@justemail.net>
	* src/help.c (do_help), src/prompt.c (do_yesno_prompt): Normalize